--- a/client/src/app/chat/chat.component.html
+++ b/client/src/app/chat/chat.component.html
@@ -5,14 +5,21 @@
     <mat-card-subtitle class="side-bar-item" routerLink="edit-profile">Edit Profile</mat-card-subtitle>
     <mat-card-subtitle class="side-bar-item" routerLink="/" (click)="exit()">Exit</mat-card-subtitle>
   </mat-card-header>
-  <mat-card-content>
-    <mat-card class="chat-item" routerLink="main-chat">
-      <mat-card-header>
-        <img mat-card-avatar class="chat-item-avatar" [src]="mainChatRoom?.avatar || ''">
-        <mat-card-title class="chat-item-title">{{mainChatRoom?.name}}t</mat-card-title>
-        <mat-card-subtitle>{{mainChatRoom?.lastMessage}}</mat-card-subtitle>
-      </mat-card-header>
-    </mat-card>
+  <mat-card-content class="rooms-container">
+
+    <div class="rooms-container-content">
+      <mat-card class="chat-item" *ngFor="let room of rooms"
+                [routerLink]="[(room.type === 'chat')? room.id : 'direct-messages-room']"
+                [queryParams]="getQueryParams(room)">
+        <mat-card-header>
+          <img mat-card-avatar class="chat-item-avatar" [src]="room?.avatar || ''">
+          <mat-card-title class="chat-item-title">{{room?.name}}</mat-card-title>
+          <mat-card-subtitle *ngIf="room.messages.length < 1">{{room?.lastMessage}}</mat-card-subtitle>
+          <mat-card-subtitle *ngIf="room.messages.length > 0">{{room?.messages[room.messages.length - 1].messageContent}}</mat-card-subtitle>
+        </mat-card-header>
+      </mat-card>
+    </div>
+
   </mat-card-content>
 </mat-card>
 
