--- a/client/src/app/chat/direct-messages-room/direct-messages-room.component.css
+++ b/client/src/app/chat/direct-messages-room/direct-messages-room.component.css
@@ -14,6 +14,7 @@
   padding: 14px 14px 16px;
   background-color: #0d06138a;
   color: #fbf8f8;
+  clear: both;
 }
 
 .direct-messages-room__user-activity {
@@ -63,7 +64,7 @@
 .message-list {
   overflow-y: auto;
   position: absolute;
-  top: 40px;
+  top: 90px;
   left: 40px;
   bottom: 260px;
   right: 40px;
@@ -86,7 +87,7 @@
   word-break: break-word;
 }
 
-.message-list-item__currentUser {
+.message-item__currentUser {
   float: right;
 }
 
@@ -119,23 +120,9 @@
   background-color: blueviolet;
 }
 
-.message-list-item {
+.message-item {
   padding: 7px 10px 20px 10px;
   clear: both;
-}
-
-.message-list-item__avatar {
-  position: absolute;
-  bottom: 0;
-  left: -60px;
-  width: 50px;
-  height: 50px;
-}
-
-.message-list-item-title {
-  margin: 0 0 10px;
-  font-size: 15px;
-  color: #905151;
 }
 
 /* width */
@@ -163,9 +150,16 @@
 }
 
 .mat-card-content {
+  top: 70px;
   height: 100%;
 }
 
 .mat-card-avatar {
   cursor: pointer;
+}
+
+.chat-room__header::after {
+  display: block;
+  content: '';
+  clear: both;
 }
