--- a/client/src/app/chat/chat.component.html
+++ b/client/src/app/chat/chat.component.html
@@ -1,7 +1,7 @@
 <mat-card class="side-bar">
   <mat-card-header class="side-bar-header">
     <img mat-card-avatar class="user-avatar" [src]="user?.avatar || ''">
-    <mat-card-title class="side-bar-title">{{user?.firstName}} {{user?.lastName}} {{userToken}}</mat-card-title>
+    <mat-card-title class="side-bar-title">{{user?.firstName}} {{user?.lastName}}</mat-card-title>
     <mat-card-subtitle class="side-bar-item" routerLink="edit-profile">Edit Profile</mat-card-subtitle>
     <mat-card-subtitle class="side-bar-item" routerLink="/" (click)="exit()">Exit</mat-card-subtitle>
   </mat-card-header>
