--- a/client/src/app/chat/chat.component.html
+++ b/client/src/app/chat/chat.component.html
@@ -9,13 +9,13 @@
 
     <div class="rooms-container-content">
       <mat-card class="chat-item" *ngFor="let room of rooms"
-                [routerLink]="[(room.type === 'chat')? room.id : 'direct-messages-room']"
+                [routerLink]="[(room?.type === 'chat')? room?.id : 'direct-messages-room']"
                 [queryParams]="getQueryParams(room)">
         <mat-card-header>
           <img mat-card-avatar class="chat-item-avatar" [src]="room?.avatar || ''">
           <mat-card-title class="chat-item-title">{{room?.name}}</mat-card-title>
-          <mat-card-subtitle *ngIf="room.messages.length < 1">{{room?.lastMessage}}</mat-card-subtitle>
-          <mat-card-subtitle *ngIf="room.messages.length > 0">{{room?.messages[room.messages.length - 1].messageContent}}</mat-card-subtitle>
+          <mat-card-subtitle *ngIf="room?.messages.length < 1">{{room?.lastMessage}}</mat-card-subtitle>
+          <mat-card-subtitle *ngIf="room?.messages.length > 0">{{room?.messages[room?.messages.length - 1].messageContent}}</mat-card-subtitle>
         </mat-card-header>
       </mat-card>
     </div>
