Created joint id for direct room of two users

--- a/client/src/app/chat/user-profile/user-profile.component.html
+++ b/client/src/app/chat/user-profile/user-profile.component.html
@@ -1,4 +1,4 @@
 <h4>user-profile</h4>
 
 <p>name: {{directRoomUser?.firstName}} {{directRoomUser?.lastName}}</p>
-<a routerLink="../direct-messages-room" [queryParams]="{id: directRoomUser?.id}">sent a message</a>
+<a routerLink="../direct-messages-room" [queryParams]="{from: user?.id, to: directRoomUser?.id}">sent a message</a>
