--- a/client/src/app/user-log-in/user-log-in.component.css
+++ b/client/src/app/user-log-in/user-log-in.component.css
@@ -18,3 +18,11 @@
   color: dimgrey;
   font-size: 16px;
 }
+
+
+@media only screen and (max-width: 1024px) and (min-width: 400px) {
+  .mat-form-field {
+    font-size: 16px!important;
+  }
+}
+
