--- a/client/src/app/chat/direct-messages-room/direct-messages-room.component.css
+++ b/client/src/app/chat/direct-messages-room/direct-messages-room.component.css
@@ -4,6 +4,7 @@
   height: 100%;
   background: url("../../images/backgrounds/img65.jpeg") no-repeat;
   background-size: cover;
+  padding: 0!important;
 }
 
 .chat-room__header {
@@ -64,11 +65,12 @@
 .message-list {
   overflow-y: auto;
   position: absolute;
-  top: 90px;
+  top: 68px;
   left: 40px;
   bottom: 260px;
   right: 40px;
   visibility: hidden;
+  padding-top: 15px;
 }
 
 .message-list-content, .message-list:hover {
@@ -162,4 +164,21 @@
   display: block;
   content: '';
   clear: both;
+}
+
+@media only screen and (max-width: 900px) {
+  .chat-room-container-footer {
+    left: 310px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .chat-room-container-footer, .message-list {
+    left: 30px!important;
+    right: 30px!important;
+  }
+
+  .chat-room__header {
+    padding: 14px 40px;
+  }
 }
