--- a/client/src/app/chat/main-chat/main-chat.component.css
+++ b/client/src/app/chat/main-chat/main-chat.component.css
@@ -4,6 +4,7 @@
   height: 100%;
   background: url("../../images/backgrounds/img65.jpeg") no-repeat;
   background-size: cover;
+  padding: 0!important;
 }
 
 .main-chat__header {
@@ -12,7 +13,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  padding: 0 24px;
+  padding: 0 35px;
   background-color: #0d06138a;
   color: #fbf8f8;
 }
@@ -58,6 +59,7 @@
   bottom: 260px;
   right: 40px;
   visibility: hidden;
+  padding-top: 15px;
 }
 
 .message-list-content, .message-list:hover {
@@ -178,4 +180,17 @@
 
 .mat-card-avatar {
   cursor: pointer;
+}
+
+@media only screen and (max-width: 900px) {
+  .main-chat-container-footer {
+    left: 310px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .main-chat-container-footer, .message-list {
+    left: 30px;
+    right: 30px;
+  }
 }
