added adapted version for rest chat components

--- a/client/src/app/chat/chat.component.css
+++ b/client/src/app/chat/chat.component.css
@@ -174,4 +174,16 @@
     cursor: pointer;
     z-index: 1;
   }
+
+  .mobile_button-back .profile-button {
+    color: black!important;
+  }
+
+  .mobile_button-back.profile-button {
+    top: 15px!important;
+  }
+
+  .mobile_button-back.direct-room-button {
+    top: 20px!important;;
+  }
 }
