--- a/client/src/app/user-param/user-param.component.css
+++ b/client/src/app/user-param/user-param.component.css
@@ -62,7 +62,7 @@
   height: 60px;
   border-radius: 30px;
   background-color: blueviolet;
-  margin: 0 auto;
+  margin: 10px auto 0;
 }
 
 .choose-avatar-icon {
