--- a/client/src/app/chat/user-profile/user-profile.component.html
+++ b/client/src/app/chat/user-profile/user-profile.component.html
@@ -1,4 +1,9 @@
-<h4>user-profile</h4>
-
-<p>name: {{directRoomUser?.firstName}} {{directRoomUser?.lastName}}</p>
-<a routerLink="../direct-messages-room" [queryParams]="{id: directRoomId}">sent a message</a>
+<mat-card class="mat-card user-profile__component">
+  <mat-card-header>
+    <mat-card-title class="user-profile__title">User Profile</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <p>name: {{directRoomUser?.firstName}} {{directRoomUser?.lastName}}</p>
+    <a routerLink="../direct-messages-room" [queryParams]="{id: directRoomId}">sent a message</a>
+  </mat-card-content>
+</mat-card>
