--- a/client/src/app/chat/user-profile/user-profile.component.css
+++ b/client/src/app/chat/user-profile/user-profile.component.css
@@ -1,5 +1,5 @@
 .user-profile__component {
-  padding: 50px;
+  /*padding: 50px;*/
   min-height: calc(100vh - 66px - 100px);
   overflow-y: auto;
   position: absolute;
@@ -12,4 +12,44 @@
 .user-profile__title {
   color: dimgrey;
   font-size: 16px;
+}
+
+.user-avatar {
+  width: 70px;
+  height: 70px;
+  margin-right: 15px;
+}
+
+.user-profile__title {
+  font-size: 20px!important;
+  color: black;
+}
+
+.user-profile__sent-message {
+  width: 60px;
+  height: 60px;
+  display: grid;
+  border-radius: 30px;
+  background-color: #8d63ad;
+  align-content: center;
+  padding: 10px;
+  position: relative;
+  bottom: -50px;
+  left: 20px;
+  cursor: pointer;
+}
+
+.user-profile__sent-message .mat-icon {
+  color: wheat;
+  margin: 0 auto;
+}
+
+.user-profile__header {
+  padding: 40px 30px 15px;
+  background-color: #cdcdcd57;
+  margin: 0 auto;
+}
+
+.mat-card.user-profile__component {
+  padding: 0;
 }
