--- a/client/src/app/chat/main-chat/main-chat.component.css
+++ b/client/src/app/chat/main-chat/main-chat.component.css
@@ -193,4 +193,13 @@
     left: 30px;
     right: 30px;
   }
+
+  .main-chat-container-footer {
+    bottom: 30px;
+  }
+
+  .message-list {
+    bottom: 220px
+  ;
+  }
 }
