added removing angular chat header when user is in chat room from mobile (max-width: 600px) in order to get more space for messages

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-sidenav-container>
+<mat-sidenav-container *ngIf="!(isChatRoomActive && isMobile)">
   <mat-sidenav-content>
     <mat-icon>forum</mat-icon>
     <span class="mat-sidenav-title">Anika Angular chat</span>
