--- a/client/src/app/chat/direct-messages-room/direct-messages-room.component.css
+++ b/client/src/app/chat/direct-messages-room/direct-messages-room.component.css
@@ -83,7 +83,7 @@
   position: relative;
   background-color: #4c62691a;
   border-radius: 5px;
-  margin-bottom: 25px;
+  margin-bottom: 15px;
   margin-right: 15px;
   margin-left: 60px;
   word-break: break-word;
@@ -180,5 +180,17 @@
 
   .chat-room__header {
     padding: 14px 40px;
+  }
+
+  .main-chat-container-footer {
+    bottom: 30px;
+  }
+
+  .message-list {
+    bottom: 155px;
+  }
+
+  .message-item {
+    margin-bottom: 10px;
   }
 }
