--- a/client/src/app/chat/main-chat/main-chat.component.css
+++ b/client/src/app/chat/main-chat/main-chat.component.css
@@ -72,7 +72,7 @@
   position: relative;
   background-color: #4c62691a;
   border-radius: 5px;
-  margin-bottom: 25px;
+  margin-bottom: 15px;
   margin-right: 15px;
   margin-left: 60px;
   word-break: break-word;
@@ -199,7 +199,10 @@
   }
 
   .message-list {
-    bottom: 220px
-  ;
+    bottom: 155px;
+  }
+
+  .message-item {
+    margin-bottom: 10px;
   }
 }
