--- a/client/src/app/chat/user-profile/user-profile.component.css
+++ b/client/src/app/chat/user-profile/user-profile.component.css
@@ -1,12 +1,11 @@
 .user-profile__component {
-  /*padding: 50px;*/
-  min-height: calc(100vh - 66px - 100px);
-  overflow-y: auto;
-  position: absolute;
+  position: relative;
+  width: 100%;
+  height: 100%;
   top: 0;
   bottom: 66px;
-  width: 100%;
   min-width: 320px;
+  overflow-y: auto;
 }
 
 .user-profile__title {
