--- a/client/src/app/user-param/user-param.component.css
+++ b/client/src/app/user-param/user-param.component.css
@@ -6,10 +6,11 @@
 }
 
 .edit-user-component {
-  min-height: calc(100vh - 66px - 100px);
+  position: relative;
+  width: 100%;
+  height: 100%;
   overflow-y: auto;
   padding: 50px;
-  position: absolute;
   top: 0;
   bottom: 66px;
 }
@@ -33,11 +34,15 @@
 .submit-button {
   display: block;
   margin: 10px auto 0 auto;
+  font-size: 16px;
+  padding: 5px 25px;
 }
 
 .change-avatar__title {
-  font-size: 18px;
-  margin: 10px 0;
+  font-size: 20px;
+  margin: 55px 0 20px;
+  text-align: center;
+  font-weight: normal;
 }
 
 .change-avatar {
@@ -50,34 +55,35 @@
 }
 
 .choose-avatar-text {
-  font-size: 13px;
+  font-size: 15px;
   text-align: center;
+  margin-bottom: 13px;
 }
 
 .circle-choose-avatar {
   cursor: pointer;
   display: grid;
   align-items: center;
-  width: 60px;
-  height: 60px;
-  border-radius: 30px;
+  width: 80px;
+  height: 80px;
+  border-radius: 40px;
   background-color: blueviolet;
   margin: 10px auto 0;
 }
 
 .choose-avatar-icon {
-  font-size: 30px!important;
+  font-size: 35px!important;
   color: white;
-  width: 30px;
-  height: 30px;
+  width: 35px;
+  height: 35px;
   margin: 0 auto;
   transition: font-size 1s ease;
 }
 
 .choose-avatar-icon:hover {
-  font-size: 33px!important;
-  width: 33px;
-  height: 33px;
+  font-size: 37px!important;
+  width: 37px;
+  height: 37px;
 }
 
 #choose-avatar {
@@ -115,6 +121,12 @@
 
   .mat-radio-button, .mat-form-field {
     font-size: 16px!important;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .choose-avatar-text {
+    font-size: 14px;
   }
 }
 
