deleted data from storage, except current user id

--- a/client/src/app/chat/edit-user-param/edit-user-param.component.html
+++ b/client/src/app/chat/edit-user-param/edit-user-param.component.html
@@ -1,2 +1,2 @@
-<app-user-param [title]="'Edit Profile'" [submitTitle]="'Save changes'" [isEdit]="true" [userBeforeEdit]="user"></app-user-param>
+<app-user-param [title]="'Edit Profile'" [submitTitle]="'Save changes'" [isEdit]="true"></app-user-param>
 
