--- a/client/src/app/user-param/user-param.component.html
+++ b/client/src/app/user-param/user-param.component.html
@@ -6,12 +6,12 @@
 
     <mat-form-field appearance="legacy">
       <mat-label>First name</mat-label>
-      <input matInput formControlName="firstName" required [value]="(isEdit) ? userBeforeEdit?.firstName : ''">
+      <input matInput formControlName="firstName" required [value]="(isEdit) ? userBeforeEdit.firstName : ''">
     </mat-form-field>
 
     <mat-form-field appearance="legacy">
       <mat-label>Last name</mat-label>
-      <input matInput formControlName="lastName" [value]="(isEdit) ? userBeforeEdit?.lastName : ''">
+      <input matInput formControlName="lastName" [value]="(isEdit) ? userBeforeEdit.lastName : ''">
     </mat-form-field>
 
     <mat-radio-group formControlName="gender" required>
@@ -20,7 +20,7 @@
 
     <mat-form-field appearance="legacy">
       <mat-label>Login</mat-label>
-      <input matInput formControlName="login" required [value]="(isEdit) ? userBeforeEdit?.login : ''">
+      <input matInput formControlName="login" required [value]="(isEdit) ? userBeforeEdit.login : ''">
     </mat-form-field>
 
     <mat-form-field appearance="legacy" *ngIf="!isEdit">
