--- a/client/src/app/chat/direct-messages-room/direct-messages-room.component.css
+++ b/client/src/app/chat/direct-messages-room/direct-messages-room.component.css
@@ -168,8 +168,8 @@
 }
 
 @media only screen and (max-width: 900px) {
-  .main-chat-container-footer {
-    left: 300px;
+  .chat-room-container-footer {
+    left: 300px!important;
     right: 50px;
     bottom: 30px;
   }
