added selecting background-color to chat-item element in chatRoomComponent when it router link is active

--- a/client/src/app/chat/chat.component.css
+++ b/client/src/app/chat/chat.component.css
@@ -49,7 +49,7 @@
   transition: background-color 1s ease;
 }
 
-.chat-item:hover {
+.chat-item:hover, .chat-item__active {
   background-color: #35459221;
 }
 
