--- a/client/src/app/chat/chat.component.html
+++ b/client/src/app/chat/chat.component.html
@@ -13,7 +13,8 @@
       <mat-card class="chat-item" *ngFor="let room of rooms"
                 [routerLink]="[(room?.type === 'chat')? room?.id : 'direct-messages-room']"
                 [queryParams]="getQueryParams(room)"
-                (click)="activeChatRoom()">
+                (click)="activeChatRoom()"
+                [routerLinkActive]="'chat-item__active'">
         <mat-card-header class="chat-item__container">
           <img mat-card-avatar class="chat-item-avatar" [src]="room?.avatar || ''">
           <mat-card-title class="chat-item-title">{{room?.name}}</mat-card-title>
