change styles of message container to getting messages from bottom to top

--- a/client/src/app/chat/chat.component.css
+++ b/client/src/app/chat/chat.component.css
@@ -47,6 +47,7 @@
   padding: 20px 15px;
   cursor: pointer;
   transition: background-color 1s ease;
+  outline: none;
 }
 
 .chat-item:hover, .chat-item__active {
