--- a/client/src/app/chat/direct-messages-room/direct-messages-room.component.html
+++ b/client/src/app/chat/direct-messages-room/direct-messages-room.component.html
@@ -7,7 +7,7 @@
     <mat-card-subtitle class="direct-messages-room__user-activity"
                        *ngIf="!directRoomUser?.online">last seen at {{directRoomUser?.lastSeen | date: 'h:mma' | lowercase}}</mat-card-subtitle>
   </mat-card-header>
-  <mat-card-content>
+  <mat-card-content class="chat-room-container__content">
     <div #messageList class="message-list">
 
       <div class="message-list-content">
