--- a/client/src/app/chat/main-chat/main-chat.component.html
+++ b/client/src/app/chat/main-chat/main-chat.component.html
@@ -2,7 +2,7 @@
   <mat-card-header class="main-chat__header">
     <span class="main-chat__header-text">Chat has {{mainChatRoom?.users.length}} users, online {{mainChatRoom?.activeUsers.length}}</span>
   </mat-card-header>
-  <mat-card-content>
+  <mat-card-content class="main-chat-container__content">
     <div #messageList class="message-list">
 
       <div class="message-list-content">
