--- a/client/src/app/chat/main-chat/main-chat.component.css
+++ b/client/src/app/chat/main-chat/main-chat.component.css
@@ -1,7 +1,7 @@
 .main-chat-container {
   position: relative;
   width: 100%;
-  height: 100%;
+  height: calc(100vh - 79px);
   background: url("../../images/backgrounds/img65.jpeg") no-repeat;
   background-size: cover;
   padding: 0!important;
@@ -17,9 +17,11 @@
 
 .main-chat-container__content {
   margin: 0;
-  /*height: calc(100% + 40px - 79px);*/
+  height: calc(100% - 40px - 76px);
   position: relative;
   top: 0!important;
+  bottom: auto;
+  display: block;
 }
 
 .main-chat__header-text {
@@ -39,12 +41,6 @@
   padding: 4px 0 !important;
 }
 
-.main-chat-container-footer {
-  position: fixed;
-  bottom: 50px;
-  left: 410px;
-  right: 60px;
-}
 .mat-icon {
   vertical-align: middle;
   margin-right: 10px;
@@ -60,7 +56,7 @@
   position: absolute;
   top: 15px;
   left: 20px;
-  bottom: 230px;
+  bottom: 0;
   right: 10px;
   visibility: hidden;
   display: flex;
@@ -83,6 +79,10 @@
   margin-right: 15px;
   margin-left: 60px;
   word-break: break-word;
+}
+
+.message-item:last-child {
+  margin-bottom: 0;
 }
 
 .message-list-item__current-user {
@@ -132,7 +132,11 @@
 }
 
 .main-chat-container-footer {
-  bottom: 40px;
+  bottom: 0;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: 0 20px 10px 20px;
 }
 
 /*.avatar-block {*/
